型のパース修正検討
monocc
https://github.com/sisshiki1969/monocc/blob/master/src/parse.c
がちゃんと型をパースしているのを見て、BNFに沿ってやらないとなぁと思い
変更できるかテストしてみる。

BNF
https://cs.wmich.edu/~gupta/teaching/cs4850/sumII06/The%20syntax%20of%20C%20in%20Backus-Naur%20form.htm

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -15,11 +15,11 @@ CPP:=../$(EXE_DIR)/cpp
 all:	test
 
 .PHONY: test
-test:	unit-tests cpp-tests cc-tests misc-tests
+test:	unit-tests #cpp-tests cc-tests misc-tests
 	@echo 'All tests PASS!'
 
 .PHONY: unit-tests
-unit-tests:	test-table test-util test-parser print-type-test
+unit-tests:	test-parser  #test-table test-util print-type-test
 
 .PHONY: cpp-tests
 cpp-tests:	test-cpp
